--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -25,9 +25,6 @@ Comments and Likes </button>
 
 
 
-
-
-
 <div  id="modal-wrapper", class="modal">
 
 <!-- Modal content-->
@@ -70,7 +67,7 @@ Comments and Likes </button>
 
     <% else %>
 
-        <h3>not add yet any comment</h3>
+        <h3>not add yet any like</h3>
         
     <% end %>
   
