--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,6 +28,9 @@
   <% end %>
 
 </div>
-
-
+<%#= form_with scope: :blog, url: import_file_path  do |f| %>
+  <%#= f.file_field :import %>
+  <%#= f.submit %>
+<%# end %>
+<%#= link_to 'export',  root_path(format: :csv) %>
 
